[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/Shoot.wav" type="AudioStream" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="PauseMenu" type="CanvasLayer"]
layer = 0

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Control/VBoxContainer"]
margin_right = 80.0
margin_bottom = 13.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Resume"

[node name="Restart" type="Button" parent="Control/VBoxContainer"]
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Restart Level"

[node name="Options" type="Button" parent="Control/VBoxContainer"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 47.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Options"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
margin_top = 51.0
margin_right = 80.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Quit"

[node name="SelectSFX" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 2 )
[connection signal="pressed" from="Control/VBoxContainer/Resume" to="Control" method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Restart" to="Control" method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="Control" method="_on_Options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="Control" method="_on_Quit_pressed"]
